syntax = "proto3";

package myapp;

message Movie {
  string id = 1;
  string url = 2;
  string description = 3;
  int32 duration = 4;
  repeated string genre = 5;
  repeated string cast = 6;
  string director = 7;
}
message TokenRequest {
  string token = 1;
}

message MoviesList {
  repeated Movie movies = 1;
}

message UserRegister {
  string first_name = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

message UserLogin {
  string username = 1;
  string password = 2;
}

message TokenResponse {
  string token = 1;
}

service MovieService {
  rpc GetMoviesByToken (TokenRequest) returns (MoviesList);
}

service AuthService {
  rpc registerUser (UserRegister) returns (TokenResponse);
  rpc loginUser (UserLogin) returns (TokenResponse);
}
